--- a/text/discussion.tex
+++ b/text/discussion.tex
@@ -82,7 +82,7 @@ Each work-package may occupy this hardware and execute arbitrary code on it in s
 In terms of pure processing power, the \Jam machine architecture can deliver extremely high levels of homogeneous trustless computation. However, the core model of \Jam is a classic parallelized compute architecture, and for solutions to be able to utilize the architecture well they must be designed with it in mind to some extent. Accordingly, until such use-cases appear on \Jam with similar semantics to existing ones, it is very difficult to make direct comparisons to existing systems. That said, if we indulge ourselves with some assumptions then we can make some crude comparisons.
 
 \subsubsection{Comparison to Polkadot}
-Modern Polkadot is at present capable of validating at most 80 parachains each doing one second of native computation and 5\textsc{mb} of \textsc{i/o} in every six. This corresponds to an aggregate compute performance of around 13x native \textsc{cpu} and a total 24-hour distributed availability of around 67\textsc{mb}/s. Accumulation is beyond Polkadot's capabilities and so not comparable.
+Polkadot is at present capable of validating at most 80 parachains each doing one second of native computation and 5\textsc{mb} of \textsc{i/o} in every six. This corresponds to an aggregate compute performance of around 13x native \textsc{cpu} and a total 24-hour distributed availability of around 67\textsc{mb}/s. Accumulation is beyond Polkadot's capabilities and so not comparable.
 
 For comparison, in our basic models, \Jam should be capable of attaining around 85x the computation load of a single native \textsc{cpu} core and a distributed availability of 682\textsc{mb}/s.
 
