--- a/text/discussion.tex
+++ b/text/discussion.tex
@@ -73,47 +73,45 @@ Estimates for memory usage are as follows:
 %With 11 concurrent \textsc{pvm} instances each using an average of at most 2\textsc{gb} then we would expect 42\textsc{gb} left over for caching the state. Assuming 2\textsc{gb} for node operation, networking and ancilliary databases, then 40\textsc{gb} is remaining for caching the most recent state in \textsc{ram}.
 As a rough guide, each parachain has an average footprint of around 2\textsc{mb} in the Polkadot Relay chain; a 40\textsc{gb} state would allow 20,000 parachains' information to be retained in state.
 
-What might be called the ``virtual hardware'' of a \Jam core is essentially a regular \textsc{cpu} core executing at somewhere between 25\% and 50\% of regular speed for the whole six-second portion and which may draw and provide 2.5\textsc{mb}/s average in general-purpose \textsc{i/o} and utilize up to 2\textsc{gb} in \textsc{ram}. The \textsc{i/o} includes any trustless reads from the \Jam chain state, albeit in the recent past. This virtual hardware also provides unlimited reads from a semi-static preimage-lookup database.
+What might be called the ``virtual hardware'' of a \Jam core is essentially a regular \textsc{cpu} core executing at somewhere between 25\% and 50\% of regular speed for the whole six-second portion and which may draw and provide 2\textsc{mb}/s average in general-purpose \textsc{i/o} and utilize up to 2\textsc{gb} in \textsc{ram}. The \textsc{i/o} includes any trustless reads from the \Jam chain state, albeit in the recent past. This virtual hardware also provides unlimited reads from a semi-static preimage-lookup database.
 
-Each work-package may occupy this hardware and execute arbitrary code on it in six-second segments to create some result of at most 90\textsc{kb}. This work result is then entitled to 10ms on the same machine, this time with no ``external'' \textsc{i/o} beyond said result, but instead with full and immediate access to the \Jam chain state and may alter the service(s) to which the results belong.
+Each work-package may occupy this hardware and execute arbitrary code on it in six-second segments to create some result of at most 48\textsc{kb}. This work result is then entitled to 10ms on the same machine, this time with no ``external'' \textsc{i/o} beyond said result, but instead with full and immediate access to the \Jam chain state and may alter the service(s) to which the results belong.
 
 \subsection{Illustrating Performance}
 
 In terms of pure processing power, the \Jam machine architecture can deliver extremely high levels of homogeneous trustless computation. However, the core model of \Jam is a classic parallelized compute architecture, and for solutions to be able to utilize the architecture well they must be designed with it in mind to some extent. Accordingly, until such use-cases appear on \Jam with similar semantics to existing ones, it is very difficult to make direct comparisons to existing systems. That said, if we indulge ourselves with some assumptions then we can make some crude comparisons.
 
 \subsubsection{Comparison to Polkadot}
-Pre-asynchronous backing, Polkadot validates around 50 parachains, each one utilizing approximately 250ms of native computation (\ie half a second of Wasm execution time at around a 50\% overhead) and 5\textsc{mb} of \textsc{i/o} for every twelve seconds of real time which passes. This corresponds to an aggregate compute performance of around parity with a native \textsc{cpu} core and a total 24-hour distributed availability of around 20\textsc{mb}/s. Accumulation is beyond Polkadot's capabilities and so not comparable.
+Polkadot is at present capable of validating at most 80 parachains each doing one second of native computation and 5\textsc{mb} of \textsc{i/o} in every six. This corresponds to an aggregate compute performance of around 13x native \textsc{cpu} and a total 24-hour distributed availability of around 67\textsc{mb}/s. Accumulation is beyond Polkadot's capabilities and so not comparable.
 
-Post asynchronous-backing and estimating that Polkadot is at present capable of validating at most 80 parachains each doing one second of native computation in every six, then the aggregate performance is increased to around 13x native \textsc{cpu} and the distributed availability increased to around 67\textsc{mb}/s.
+For comparison, in our basic models, \Jam should be capable of attaining around 85x the computation load of a single native \textsc{cpu} core and a distributed availability of 682\textsc{mb}/s.
 
-For comparison, in our basic models, \Jam should be capable of attaining around 85x the computation load of a single native \textsc{cpu} core and a distributed availability of 852\textsc{mb}/s.
 %---- Update from here.
 \subsubsection{Simple Transfers}
 We might also attempt to model a simple transactions-per-second amount, with each transaction requiring a signature verification and the modification of two account balances. Once again, until there are clear designs for precisely how this would work we must make some assumptions. Our most naive model would be to use the \Jam cores (\ie refinement) simply for transaction verification and account lookups. The \Jam chain would then hold and alter the balances in its state. This is unlikely to give great performance since almost all the needed \textsc{i/o} would be synchronous, but it can serve as a basis.
 
-A 15\textsc{mb} work-package can hold around 125k transactions at 128 bytes per transaction. However, a 90\textsc{kb} work-result could only encode around 11k account updates when each update is given as a pair of a 4 byte account index and 4 byte balance, resulting in a limit of 5.5k transactions per package, or 312k \textsc{tps} in total. It is possible that the eight bytes could typically be compressed by a byte or two, increasing maximum throughput a little. Our expectations are that state updates, with highly parallelized Merklization, can be done at between 500k and 1 million reads/write per second, implying around 250k-350k \textsc{tps}, depending on which turns out to be the bottleneck.
+A 12\textsc{mb} work-package can hold around 96k transactions at 128 bytes per transaction. However, a 48\textsc{kb} work-result could only encode around 6k account updates when each update is given as a pair of a 4 byte account index and 4 byte balance, resulting in a limit of 3k transactions per package, or 171k \textsc{tps} in total. It is possible that the eight bytes could typically be compressed by a byte or two, increasing maximum throughput a little. Our expectations are that state updates, with highly parallelized Merklization, can be done at between 500k and 1 million reads/write per second, implying around 250k-350k \textsc{tps}, depending on which turns out to be the bottleneck.
 
-A more sophisticated model would be to use the \Jam cores for balance updates as well as transaction verification. We would have to assume that state and the transactions which operate on them can be partitioned between work-packages with some degree of efficiency, and that the 15\textsc{mb} of the work-package would be split between transaction data and state witness data. Our basic models predict that a 4bn 32-bit account system paginated into $2^{10}$ accounts/page and 128 bytes per transaction could, assuming only around 1\% of oraclized accounts were useful, average upwards of 1.7m\textsc{tps} depending on partitioning and usage characteristics. Partitioning could be done with a fixed fragmentation (essentially sharding state), a rotating partition pattern or a dynamic partitioning (which would require specialized sequencing).
+A more sophisticated model would be to use the \Jam cores for balance updates as well as transaction verification. We would have to assume that state and the transactions which operate on them can be partitioned between work-packages with some degree of efficiency, and that the 12\textsc{mb} of the work-package would be split between transaction data and state witness data. Our basic models predict that a 32-bit account system paginated into $2^{10}$ accounts/page and 128 bytes per transaction could, assuming only around 1\% of oraclized accounts were useful, average upwards of 1.4m\textsc{tps} depending on partitioning and usage characteristics. Partitioning could be done with a fixed fragmentation (essentially sharding state), a rotating partition pattern or a dynamic partitioning (which would require specialized sequencing).
 
-Interestingly, we expect neither model to be bottlenecked in computation, meaning that transactions could be substantially more sophisticated, perhaps with more flexible cryptography or smart contract functionality, without a significant impact on performance.
+Interestingly, we expect neither model to be bottlenecked in computation, meaning that transactions could be substantially more sophisticated, perhaps with more flexible cryptography or smart-contract functionality, without a significant impact on performance.
 
 \subsubsection{Computation Throughput}
+The \textsc{tps} metric does not lend itself well to measuring distributed systems' computational performance, so we now turn to another slightly more compute-focussed benchmark: the \textsc{evm}. The basic \emph{YP} Ethereum network, now approaching a decade old, is probably the best known example of general purpose decentralized computation and makes for a reasonable yardstick. It is able to sustain a computation and \textsc{i/o} rate of 1.25M gas/sec, with a peak throughput of twice that. The \textsc{evm} gas metric was designed to be a time-proportional metric for predicting and constraining program execution. Attempting to determine a concrete comparison to \textsc{pvm} throughput is non-trivial and necessarily opinionated owing to the disparity between the two platforms, including word size, endianness, stack/register architecture and memory model. However, we will attempt to determine a reasonable range of values.
 
-The \textsc{tps} metric does not lend itself well to measuring distributed systems' computational performance, so we now turn to another slightly more compute-focussed benchmark: the \textsc{evm}. The basic \emph{YP} Ethereum network, now approaching a decade old, is probably the best known example of general purpose decentralized computation and makes for a reasonable yardstick. It is able to sustain a computation and \textsc{i/o} rate of 1.25M gas/sec, with a peak throughput of twice that. The \textsc{evm} gas metric was designed to be a time-proportional metric for predicting and constraining program execution. Attempting to determine a concrete comparison to \textsc{pvm} throughput is non-trivial and necessarily opinionated owing to the disparity between the two platforms including word size, endianness and stack/register architecture and memory model. However, we will attempt to determine a reasonable range of values.
+\textsc{Evm} gas does not directly translate into native execution as it also combines state reads and writes as well as transaction input data, implying it is able to process some combination of up to 595 storage reads, 57 storage writes and 1.25M computation-gas as well as 78\textsc{kb} input data in each second, trading one against the other.\footnote{The latest ``proto-danksharding'' changes allow it to accept 87.3\textsc{kb}/s in committed-to data though this is not directly available within state, so we exclude it from this illustration, though including it with the input data would change the results little.} We cannot find any analysis of the typical breakdown between storage \textsc{i/o} and pure computation, so to make a very conservative estimate, we assume it does all four. In reality, we would expect it to be able to do on average \nicefrac{1}{4} of each.
 
-\textsc{Evm} gas does not directly translate into native execution as it also combines state reads and writes as well as transaction input data, implying it is able to process some combination of up to 595 storage reads, 57 storage writes and 1.25M gas as well as 78\textsc{kb} input data in each second, trading one against the other.\footnote{The latest ``proto-danksharding'' changes allow it to accept 87.3\textsc{kb}/s in committed-to data though this is not directly available within state, so we exclude it from this illustration, though including it with the input data would change the results little.} We cannot find any analysis of the typical breakdown between storage \textsc{i/o} and pure computation, so to make a very conservative estimate, we assume it does all four. In reality, we would expect it to be able to do on average \nicefrac{1}{4} of each.
+Our experiments\footnote{This is detailed at \url{{https://hackmd.io/@XXX9CM1uSSCWVNFRYaSB5g/HJarTUhJA}} and intended to be updated as we get more information.} show that on modern, high-end consumer hardware with a high-quality \textsc{evm} implementation, we can expect somewhere between 100 and 500 gas/µs in throughput on pure-compute workloads (we specifically utilized Odd-Product, Triangle-Number and several implementations of the Fibonacci calculation). To make a conservative comparison to \textsc{pvm}, we propose transpilation of the \textsc{evm} code into \textsc{pvm} code and then re-execution of it under the Polka\textsc{vm} prototype.\footnote{It is conservative since we don't take into account that the source code was originally compiled into \textsc{evm} code and thus the \textsc{pvm} machine code will replicate architectural artifacts and thus is very likely to be pessimistic. As an example, all arithmetic operations in \textsc{evm} are 256-bit and 64-bit native \textsc{pvm} is being forced to honor this even if the source code only actually required 64-bit values.}
 
-Our experiments\footnote{This is detailed at \url{{https://hackmd.io/@XXX9CM1uSSCWVNFRYaSB5g/HJarTUhJA}} and intended to be updated as we get more information.} show that on modern, high-end consumer hardware with a modern \textsc{evm} implementation, we can expect somewhere between 100 and 500 gas/µs in throughput on pure-compute workloads (we specifically utilized Odd-Product, Triangle-Number and several implementations of the Fibonacci calculation). To make a conservative comparison to \textsc{pvm}, we propose transcompilation of the \textsc{evm} code into \textsc{pvm} code and then re-execution of it under the Polka\textsc{vm} prototype.\footnote{It is conservative since we don't take into account that the source code was originally compiled into \textsc{evm} code and thus the \textsc{pvm} machine code will replicate architectural artifacts and thus is very likely to be pessimistic. As an example, all arithmetic operations in \textsc{evm} are 256-bit and 32-bit native \textsc{pvm} is being forced to honor this even if the source code only actually required 32-bit values.}
-
-To help estimate a reasonable lower-bound of \textsc{evm} gas/µs, \eg for workloads which are more memory and \textsc{i/o} intensive, we look toward real-world permissionless deployments of the \textsc{evm} and see that the Moonbeam network, after correcting for the slowdown of executing within the recompiled WebAssembly platform on the somewhat conservative Polkadot hardware platform, implies a throughput of around 100 gas/µs. We therefore assert that in terms of computation, 1µs \textsc{evm} gas approximates to around 100-500 gas on modern high-end consumer hardware.\footnote{We speculate that the substantial range could possibly be caused in part by the major architectural differences between the \textsc{evm} \textsc{isa} typical modern hardware.}
+To help estimate a reasonable lower-bound of \textsc{evm} gas/µs, \eg for workloads which are more memory and \textsc{i/o} intensive, we look toward real-world permissionless deployments of the \textsc{evm} and see that the Moonbeam network, after correcting for the slowdown of executing within the recompiled WebAssembly platform on the somewhat conservative Polkadot hardware platform, implies a throughput of around 100 gas/µs. We therefore assert that in terms of computation, 1µs approximates to around 100-500 \textsc{evm} gas on modern high-end consumer hardware.\footnote{We speculate that the substantial range could possibly be caused in part by the major architectural differences between the \textsc{evm} \textsc{isa} and typical modern hardware.}
 
 Benchmarking and regression tests show that the prototype \textsc{pvm} engine has a fixed preprocessing overhead of around 5ns/byte of program code and, for arithmetic-heavy tasks at least, a marginal factor of 1.6-2\% compared to \textsc{evm} execution, implying an asymptotic speedup of around 50-60x. For machine code 1\textsc{mb} in size expected to take of the order of a second to compute, the compilation cost becomes only 0.5\% of the overall time. \footnote{As an example, our odd-product benchmark, a very much pure-compute arithmetic task, execution takes 58s on \textsc{evm}, and 1.04s within our \textsc{pvm} prototype, including all preprocessing.} For code not inherently suited to the 256-bit \textsc{evm} \textsc{isa}, we would expect substantially improved relative execution times on \textsc{pvm}, though more work must be done in order to gain confidence that these speed-ups are broadly applicable.
 
 If we allow for preprocessing to take up to the same component within execution as the marginal cost (owing to, for example, an extremely large but short-running program) and for the \textsc{pvm} metering to imply a safety overhead of 2x to execution speeds, then we can expect a \Jam core to be able to process the equivalent of around 1,500 \textsc{evm} gas/µs. Owing to the crudeness of our analysis we might reasonably predict it to be somewhere within a factor of three either way---\ie 500-5,000 \textsc{evm} gas/µs.
 
-\Jam cores are each capable of 2.5\textsc{mb}/s bandwidth, which must include any state \textsc{i/o} and data which must be newly introduced (\eg transactions). While writes come at comparatively little cost to the core, only requiring hashing to determine an eventual updated Merkle root, reads must be witnessed, with each one costing around 640 bytes of witness conservatively assuming a one-million entry binary Merkle trie. This would result in a maximum of a little under 4k reads/second/core, with the exact amount dependent upon how much of the bandwidth is used for newly introduced input data.
+\Jam cores are each capable of 2\textsc{mb}/s bandwidth, which must include any state \textsc{i/o} and data which must be newly introduced (\eg transactions). While writes come at comparatively little cost to the core, only requiring hashing to determine an eventual updated Merkle root, reads must be witnessed, with each one costing around 640 bytes of witness conservatively assuming a one-million entry binary Merkle trie. This would result in a maximum of a little over 3k reads/second/core, with the exact amount dependent upon how much of the bandwidth is used for newly introduced input data.
 
-Aggregating everything across \Jam, excepting accumulation which could add further throughput, numbers can be multiplied by 341 (with the caveat that each one's computation cannot interfere with any of the others' except through state oraclization and accumulation). Unlike for \emph{roll-up chain} designs such as Polkadot and Ethereum, there is no need to have persistently fragmented state. Smart-contract state may be held in a coherent format on the \Jam chain so long as any updates are made through the 15\textsc{kb}/core/sec work results, which would need to contain only the hashes of the altered contracts' state roots.
+Aggregating everything across \Jam, excepting accumulation which could add further throughput, numbers can be multiplied by 341 (with the caveat that each one's computation cannot interfere with any of the others' except through state oraclization and accumulation). Unlike for \emph{roll-up chain} designs such as Polkadot and Ethereum, there is no need to have persistently fragmented state. Smart-contract state may be held in a coherent format on the \Jam chain so long as any updates are made through the 8\textsc{kb}/core/sec work results, which would need to contain only the hashes of the altered contracts' state roots.
 
 Under our modelling assumptions, we can therefore summarize:
 \begin{center}
@@ -124,14 +122,14 @@ Under our modelling assumptions, we can therefore summarize:
     Compute (\textsc{evm} gas/µs) & $1.25^\dagger$ & 500-5,000 & 0.15-1.5\textsc{m} \\
     State writes (s$^{-1}$) & $57^\dagger$ & n/a & n/a \\
     State reads (s$^{-1}$) & $595^\dagger$ & 4\textsc{k}${}^\ddagger$ & 1.4\textsc{m}${}^\ddagger$ \\
-    Input data (s$^{-1}$) & 78\textsc{kb}${}^\dagger$ & 2.5\textsc{mb}${}^\ddagger$ & 852\textsc{mb}${}^\ddagger$ \\
+    Input data (s$^{-1}$) & 78\textsc{kb}${}^\dagger$ & 2\textsc{mb}${}^\ddagger$ & 682\textsc{mb}${}^\ddagger$ \\
     \bottomrule
   \end{tabular}
 \end{center}
 
 What we can see is that \Jam's overall predicted performance profile implies it could be comparable to many thousands of that of the basic Ethereum L1 chain. The large factor here is essentially due to three things: spacial parallelism, as \Jam can host several hundred cores under its security apparatus; temporal parallelism, as \Jam targets continuous execution for its cores and pipelines much of the computation between blocks to ensure a constant, optimal workload; and platform optimization by using a \textsc{vm} and gas model which closely fits modern hardware architectures.
 
-It must however be understood that this is a provisional and crude estimation only. It is included for only the purpose of expressing \Jam's performance in tangible terms and is not intended as a means of comparing to a ``full-blown'' Ethereum/L2-ecosystem combination. Specifically, it does not take into account:
+It must however be understood that this is a provisional and crude estimation only. It is included only for the purpose of expressing \Jam's performance in tangible terms. Specifically, it does not take into account:
 \begin{itemize}
   \item that these numbers are based on real performance of Ethereum and performance modelling of \Jam (though our models are based on real-world performance of the components);
   \item any L2 scaling which may be possible with either \Jam or Ethereum;
