Definitions: Linguistic Tweak

--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -119,7 +119,7 @@
     \item[$\Omega_V$] Void inner-\textsc{pvm} memory host-call.
     \item[$\Omega_W$] Write-storage host-call.
     \item[$\Omega_X$] Expunge-\textsc{pvm} host-call.
-    \item[$\Omega_Y$] Import segment host-call.
+    \item[$\Omega_Y$] Fetch data host-call.
     \item[$\Omega_Z$] Zero inner-\textsc{pvm} memory host-call.
     \item[$\Omega_\Taurus$] Yield accumulation trie result host-call.
   \end{description}
