--- a/preamble.tex
+++ b/preamble.tex
@@ -190,7 +190,7 @@
 \newcommand*{\registers}{\omega}
 \newcommand*{\memory}{\mu}
 
-\newcommand*{\jamdraftversion}{\input{VERSION}\!\!\!\! NEW DELHI}
+\newcommand*{\jamdraftversion}{\input{VERSION}\!\!\!\!}
 \newcommand*{\jamdraftversionstring}{\jamdraftversion}
 
 \newcommand*{\makegpbackground}{
